<resources>
    <string name="app_name">Top X List</string>
    <string name="title_activity_main">Top X List</string>
    <string name="title_activity_xlist_edit">Edit List</string>
    <string name="title_activity_xelem_create">Create Element</string>
    <string name="title_activity_xlist_create">Create List</string>
    <string name="title_activity_xelem_edit">Edit Element</string>
    <string name="title_activity_xelem_view">View Element</string>
    <string name="title_activity_scrolling">View List</string>
    <string name="title_activity_xlist_view_long_description">View List Long Description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_image_fullscreen">Image</string>
    <string name="title_activity_xelem_trash">Element Trash</string>
    <string name="main_activity_title">My Lists</string>
    <string name="main_activity_trash_fragment_title">Trash: My Lists</string>
    <string name="search_title_main">List Filter</string>
    <string name="search_hint">Filter by #tags or keywords</string>
    <string name="edit_description">Edit element.</string>
    <string name="create_and_edit_save_button">Save</string>
    <string name="create_and_edit_cancel_button">Cancel</string>
    <string name="create_and_edit_title_label">Title:</string>
    <string name="xlist_short_desc_title"> Short Description:</string>
    <string name="xlist_long_desc_title">Long Description:</string>
    <string name="xlist_tags_editor_title">Tags:</string>
    <string name="xlist_tag_add_text_name">New Tag:</string>
    <string name="xlist_newtag_input_hint">newTagName</string>
    <string name="xList_tag_input_button_label_text">ADD</string>
    <string name="tag_content_desc_delete_button">Deletes Tag</string>
    <string name="xelem_create_and_edit_num_label">Number:</string>
    <string name="xelem_desc_title">Description:</string>
    <string name="xelem_mark_text">Mark Done</string>
    <string name="mark_not_done">Mark Not Done</string>
    <string name="mark_done">Mark Done</string>
    <string name="xlist_title_input_hint">Best Quotes</string>
    <string name="xlist_short_desc_input_hint">Just a few words so I remember what this list is for…</string>
    <string name="xlist_long_desc_input_hint">This should contain a thorough explanation of the List and its Purpose…</string>
    <string name="edit_list_icon_hint">Edit List</string>
    <string name="xelem_description_input_hint">Here you can explain everything regarding this element in your list…</string>
    <string name="xelem_title_input_hint">5th favorite icecream</string>
    <string name="xelem_num_input_hint">default is: last one</string>
    <string name="xelem_num_input_hint_alt">default is: first one</string>
    <string name="xlist_long_desc_view_label">Long Description:</string>
    <string name="topxlist_name_logo">App Name Logo</string>
    <string name="collapsing_toolbar_long_description_empty_tip">Edit List to display long description here.</string>
    <string name="delete_list_icon_title">Delete List</string>
    <string name="delete_elem_icon_title">Delete Element</string>
    <string name="long_desc_view_activity_empty_hint">Dont leave me empty, please…</string>
    <string name="test_text_tag_layout">#tugendenSchaffen</string>
    <string name="test_collapsing_toolbar_text_view">Collapsing Toolbar Test Text. Is this working or does this look stupid? Please tell me and be honest!</string>
    <string name="start_list_title">How to get started…</string>
    <string name="start_list_short_desc"><![CDATA[Click the + in the bottom right to create your first list.
        Edit lists by clicking on the pencil or check icon.
        Reorder your lists via drag & drop.
        Swipe left to trash lists, and right to mark lists as done.
        Use the search field at the top to filter and find lists.
        Click this list to see its elements.]]></string>
    <string name="start_list_long_desc">Long Descriptions can be really long.
        So you have all the space you need to tell the full story behind your list.
        You can click the image above, to view it in fullscreen-mode.
        Tap on the edit button in the bottom right corner to edit this list.</string>
    <string name="start_list_start_tag">listsCanHaveTags</string>
    <string name="start_list_1_title">Intuitive</string>
    <string name="start_list_2_title">Simple</string>
    <string name="start_list_3_title">Numbered</string>
    <string name="start_list_4_title">Drag and Drop</string>
    <string name="start_list_5_title">Swipe left and right</string>
    <string name="start_list_6_title">Edit</string>
    <string name="start_list_7_title">Visually pleasing</string>
    <string name="start_list_8_title">Images</string>
    <string name="start_list_9_title">Settings</string>
    <string name="start_list_10_title">Trash</string>
    <string name="start_list_1_desc">To get started right away</string>
    <string name="start_list_2_desc">Our lives are complicated enough</string>
    <string name="start_list_3_desc">Keep track of the best</string>
    <string name="start_list_4_desc">Easy to reorder</string>
    <string name="start_list_5_desc">Its just fun</string>
    <string name="start_list_6_desc">Errare humanum est…</string>
    <string name="start_list_7_desc">At least that\'s what I was aiming for…</string>
    <string name="start_list_8_desc">A picture tells more than a thousand words…</string>
    <string name="start_list_9_desc">Make it work for you</string>
    <string name="start_list_10_desc">We all make misteaks…</string>
    <string name="alert_dialog_delete_list_title">Delete List?</string>
    <string name="alert_dialog_delete_list_message_pre">Sure you want to delete</string>
    <string name="alert_dialog_delete_list_message_post">permanently?</string>
    <string name="alert_dialog_delete_element_title">Delete Element?</string>
    <string name="alert_dialog_delete_element_message_pre">Sure you want to delete</string>
    <string name="alert_dialog_delete_element_message_post">permanently?</string>
    <string name="alert_dialog_nosave_exit_title_element">Exit without saving?</string>
    <string name="alert_dialog_nosave_exit_message_element">Click SAVE to keep element in this from.</string>
    <string name="alert_dialog_nosave_exit_title_list">Exit without saving?</string>
    <string name="alert_dialog_nosave_exit_message_list">Click SAVE to keep list in this from.</string>
    <string name="alert_dialog_nosave_edit_exit_title_element">Exit without saving changes?</string>
    <string name="alert_dialog_nosave_edit_exit_message_element">Click SAVE to save changes.</string>
    <string name="alert_dialog_nosave_edit_exit_title_list">Exit without saving changes?</string>
    <string name="alert_dialog_nosave_edit_exit_message_list">Click SAVE to save changes.</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_exit">Exit</string>
    <string name="no_title_entered">Not title was entered.</string>
    <string name="title_already_exists">Title already exists.</string>
    <string name="no_tag_title_entered">No tag name was entered.</string>
    <string name="no_spaces_allowed_in_tags">No spaces allowed in tags.</string>
    <string name="tag_title_already_exists_for_list">Duplicate tag name.</string>
    <string name="no_proper_number_entered">No proper number was entered for element.</string>
    <string name="html_export_title">My Top X List Lists:</string>
    <string name="html_external_storage_not_accessible">External storage not accessible</string>
    <string name="html_export_success">HTML export successful .</string>
    <string name="html_export_failure">HTML export failed; could\'nt create File.</string>
    <string name="export_file_chooser_title">Export File</string>
    <string name="image_description">your image</string>
    <string name="image_pane_delete_button_text">Delete</string>
    <string name="image_pane_select_button_text">Select</string>
    <string name="image_pane_change_button_text">Change</string>
    <string name="image_panel_desc">Image: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_draw_all_lists">All Lists</string>
    <string name="nav_draw_export">Export (HTML)</string>
    <string name="nav_draw_settings">Settings</string>
    <string name="nav_draw_give_feedback">Give Feedback</string>
    <string name="nav_draw_trashed_lists_title">Trashed Lists</string>
    <string name="preference_layout_appearance">Appearance</string>
    <string name="appearance_category_title">Appearance</string>
    <string name="pref_title_image_size">Image size</string>
    <string name="pref_summary_image_size">Image height in pixel. More looks better but costs more storage and loading time. Image aspect always 16x9.</string>
    <string name="preference_layout_usability">Usability</string>
    <string name="usability_category_title">Usability</string>
    <string name="auto_save_setting_title">Automatically save changes</string>
    <string name="auto_save_setting_summary">Changes are automatically saved when editing, unless canceled.</string>
    <string name="pref_title_confirm_delete">Confirm deletion</string>
    <string name="pref_summary_confirm_delete">You will be prompted to confirm deletions of any kind.</string>
    <string name="pref_title_new_obj_num">Lists are queues</string>
    <string name="pref_summary_new_obj_num">New elements get appended to the end of the list rather than to the front.</string>
    <string name="pref_title_trash_first">Trash before permanent deletion</string>
    <string name="pref_summary_trash_first">Items get trashed first. They can be permanently deleted later from the trash.</string>
    <string name="pref_title_restore_pos">Trash restore old position</string>
    <string name="pref_summary_restore_pos">Items get restored to their old positions. Otherwise, new position is based on \'Lists are queues\' preference.</string>
    <string name="pref_title_trash_size">Max number of items per trash</string>
    <string name="pref_summary_trash_size">If the specified number of items is about to be succeeded, the oldest item gets permanently deleted from trash.</string>
    <string name="story_button_text">View the whole story…</string>
    <string name="nothing_to_show_elem_view">Nothing to show…</string>
    <string name="your_image_fullscreen_hint">Your image</string>
    <string name="trash">Trash</string>
    <string name="restore_icon_hint">Restore or permanently delete elements.</string>
    <string name="deletion_successful">Element deleted successfully.</string>
    <string name="restoration_successful">Element restored successfully.</string>
    <string name="list_restore_successful">List restored successfully.</string>
    <string name="list_deleted_successfully">List deleted successfully.</string>
    <string name="trash_guide_delete">← Delete</string>
    <string name="trash_guide_separator">|</string>
    <string name="trash_guide_restore">Restore →</string>
    <string name="trashed_undo_button_text">UNDO</string>
    <string name="element_trashed_successfully">Element moved to trash successfully.</string>
    <string name="list_trashed_successfully">List moved to trash successfully.</string>
</resources>